cmake_minimum_required(VERSION 3.8)
project(amss)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        camera/CameraReader.cpp
        camera/CameraReader.h
        camera/DotRecognizer.cpp
        camera/DotRecognizer.h
        camera/ImageSender.cpp
        camera/ImageSender.h
        camera/LineRecognizer.cpp
        camera/LineRecognizer.h
        camera/SignRecognizer.cpp
        camera/SignRecognizer.h
        common/CameraImageRepo.cpp
        common/CameraImageRepo.h
        common/Constants.h
        common/EventBase.cpp
        common/EventBase.h
        common/MapRepo.cpp
        common/MapRepo.h
        common/SensingEventBase.cpp
        common/SensingEventBase.h
        common/SensorDataRepo.cpp
        common/SensorDataRepo.h
        main/AutonomousPathPlanningMode.cpp
        main/AutonomousPathPlanningMode.h
        main/Initializer.cpp
        main/Initializer.h
        main/MainController.cpp
        main/MainController.h
        main/ManualMode.cpp
        main/ManualMode.h
        main/ModeBase.cpp
        main/ModeBase.h
        main/SuspendMode.cpp
        main/SuspendMode.h
        network/NetMessageEventAdapter.h
        network/NetworkManager.cpp
        network/NetworkManager.h
        network/TCPSocket.cpp
        network/TCPSocket.h
        network/UDPSocket.cpp
        network/UDPSocket.h
        sam/MapRepo.cpp
        sam/MapRepo.h
        sam/MazeGrid.cpp
        sam/MazeGrid.h
        sam/MazeMapper.cpp
        sam/MazeMapper.h
        sam/PathPlanner.cpp
        sam/PathPlanner.h
        sam/WallRecognizer.cpp
        sam/WallRecognizer.h
        sam/WallRecognizerEvent.cpp
        sam/WallRecognizerEvent.h
        sensorreadloop/VL53L0X_API/vl53l0x_api.h
        sensorreadloop/VL53L0X_API/vl53l0x_api_calibration.h
        sensorreadloop/VL53L0X_API/vl53l0x_api_core.h
        sensorreadloop/VL53L0X_API/vl53l0x_api_ranging.h
        sensorreadloop/VL53L0X_API/vl53l0x_api_strings.h
        sensorreadloop/VL53L0X_API/vl53l0x_def.h
        sensorreadloop/VL53L0X_API/vl53l0x_device.h
        sensorreadloop/VL53L0X_API/vl53l0x_interrupt_threshold_settings.h
        sensorreadloop/VL53L0X_API/vl53l0x_tuning.h
        sensorreadloop/FlightSensorLeft.cpp
        sensorreadloop/FlightSensorLeft.h
        sensorreadloop/FlightSensorRight.cpp
        sensorreadloop/FlightSensorRight.h
        sensorreadloop/SensorData.cpp
        sensorreadloop/SensorData.h
        sensorreadloop/SensorReaderLoop.h
        sensorreadloop/SonarFront.cpp
        sensorreadloop/SonarFront.h
        sensorreadloop/test.cpp
        servoencoder/BehaviorExecutor.cpp
        servoencoder/BehaviorExecutor.h
        servoencoder/PID.cpp
        servoencoder/PID.h
        servoencoder/ServoEncoder.cpp
        servoencoder/ServoEncoder.h
        main.cpp main/AutonomousMovingMode.cpp main/AutonomousSignRecognitionMode.cpp main/AutonomousSignRecognitionMode.h)

add_executable(amss ${SOURCE_FILES})